refactor Move test configuration for running test.