@@ -93,6 +93,10 @@ allprojects {
 
     tasks.test {
         useJUnitPlatform()
+        jvmArgs(
+            "--add-opens", "java.base/java.nio.file=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+        )
     }
 }
 
